<resources>
    <string name="app_name">Test6</string>
    <string name="title_forum">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_friends">Friend</string>
    <string name="title_setting">Setting</string>
    <string name="hello1">Post 1</string>
    <string name="title_activity_posts">ScrollingActivity</string>
    <string name="topic_title">This is a title</string>
    <string name="topic_body">Write your forum description here</string>
    <string name="comment_body">Write your comment here</string>
    <string name="action_settings">Settings</string>
    <string-array name="Categories">
        <item>Dating &amp; Relationships</item>
        <item>Teenagers</item>
        <item>Parenting</item>
        <item>Child Care</item>
        <item>Finances</item>
        <item>Mental Health Support</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="dateerror">Enter a valid date</string>
    <string name="ageerror">Enter a valid age</string>
    <string name="kidserror">Enter a valid number</string>
    <string name="passworderror">Password must include  UpperCase, LowerCase, Symbols and Numbers </string>
    <string name="facebook_app_id">157256782740290</string>
    <string name="fb_login_protocol_scheme">fb157256782740290</string>
    <string name="termsofService"> Terms of Service and</string>
    <string name="termsofService1">By continuing you agree to our</string>
    <string name="terms1">and our </string>
    <string name="privacy">Privacy Policy </string>
    <string name="text1">

        Hello, users of Single Parent App! This User Agreement (“Terms”) applies to your access to and use of the websites, mobile apps, widgets, APIs, emails, and other online products and services (collectively, the “Services”) provided by us.

Remember SingleParentCommunity is to meet new people and build meaningful relationships, but we still need some basic rules. By accessing or using our Services, you agree to be bound by these Terms. If you do not agree to these Terms, you may not access or use our Services.

Please take a look at SingleParentCommunity’s Privacy Policy too—it explains how and why we collect, use, and share information about you when you access or use our Services.\n\n

 </string>
    <string name="text2">

        <b>1.Your Access to the Services</b>\n
You should definitely be a Single Parent to be able to access this app.\n
Children under the age of 13 are not allowed to create an Account or otherwise use the Services. Additionally, you must be over the age required by the laws of your country to create an account or otherwise use the Services.\n
In addition, certain of our Services or portions of our Services require you to be 18 years of age or older, so please read all notices and any Additional Terms carefully when you access the Services.\n\n

 </string>
    <string name="text3">
      <b>2. Your Use of the Services</b>\n
     This App grants you a personal, non-transferable, non-exclusive, revocable, limited license to use and access the Services solely as permitted by these Terms. We reserve all rights not expressly granted to you by these Terms.\n
Except as permitted through the Services or as otherwise permitted by us in writing, your license does not include the right to:\n
•	license, sell, transfer, assign, distribute, host, or otherwise commercially exploit the Services or Content;
•	We reserve the right to modify, suspend, or discontinue the Services (in whole or in part) at any time, with or without notice to you. Any future release, update, or other addition to functionality of the Services will be subject to these Terms, which may be updated from time to time. You agree that we will not be liable to you or to any third party for any modification, suspension, or discontinuation of the Services or any part thereof.\n\n

 </string>
    <string name="text4">

        <b>3. Your Account and Account Security</b>\n
To use certain features of our Services, you may be required to create an “Account” and provide us with a username, password, and certain other information about yourself as set forth in the Privacy Policy.\n
You are solely responsible for the information associated with your Account and anything that happens related to your Account. You must maintain the security of your Account and immediately notify the admin if you discover or suspect that someone has accessed your Account without your permission. We recommend that you use a strong password that is used only with your Account and enable two-factor authentication.\n
You will not license, sell, or transfer your Account without our prior written approval.\n\n

 </string>
    <string name="text5">

        <b>4. Your Content</b>\n

The Services may contain information, text, links, graphics, photos, videos, or other materials (“Content”), including Content created or submitted to the Services by you or through your Account (“Your Content”). We take no responsibility for and we do not expressly or implicitly endorse, support, or guarantee the completeness, truthfulness, accuracy, or reliability of any of Your Content.\n
By submitting Your Content to the Services, you represent and warrant that you have all rights, power, and authority necessary to grant the rights to Your Content contained within these Terms. Because you alone are responsible for Your Content, you may expose yourself to liability if you post or share Content without all necessary rights.\n\n

 </string>
    <string name="text6">

       <b>5. Third-Party Content, Advertisements, and Promotions</b>\n
The Services may contain links to third-party websites, products, or services, which may be posted by advertisers, our affiliates, our partners, or other users (“Third-Party Content”). Third-Party Content is not under our control, and we are not responsible for any third party’s websites, products, or services. Your use of Third-Party Content is at your own risk and you should make any investigation you feel necessary before proceeding with any transaction in connection with such Third-Party Content.\n
The Services may also contain sponsored Third-Party Content or advertisements. The type, degree, and targeting of advertisements are subject to change, and you acknowledge and agree that we may place advertisements in connection with the display of any Content or information on the Services, including Your Content.\n\n

 </string>
    <string name="text7">

       <b>6. Limitation of Liability</b>\n
•	IN NO EVENT AND UNDER NO THEORY OF LIABILITY, INCLUDING CONTRACT, TORT, NEGLIGENCE, STRICT LIABILITY, WARRANTY, OR OTHERWISE, WILL THE REDDIT ENTITIES BE LIABLE TO YOU FOR ANY INDIRECT, CONSEQUENTIAL, EXEMPLARY, INCIDENTAL, SPECIAL, OR PUNITIVE DAMAGES, OR LOST PROFITS ARISING FROM OR RELATING TO THESE TERMS OR THE SERVICES, INCLUDING THOSE ARISING FROM OR RELATING TO CONTENT MADE AVAILABLE ON THE SERVICES THAT IS ALLEGED TO BE DEFAMATORY, OFFENSIVE, OR ILLEGAL. ACCESS TO, AND USE OF, THE SERVICES IS AT YOUR OWN DISCRETION AND RISK, AND YOU WILL BE SOLELY RESPONSIBLE FOR ANY DAMAGE TO YOUR DEVICE OR COMPUTER SYSTEM, OR LOSS OF DATA RESULTING THEREFROM. \n\n


 </string>
    <string name="text8">

       <b>7. Disclaimers</b>\n
•	THE SERVICES ARE PROVIDED “AS IS” AND “AS AVAILABLE” WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, IMPLIED WARRANTIES OF MERCHANTABILITY, TITLE, FITNESS FOR A PARTICULAR PURPOSE, AND NON-INFRINGEMENT. SINGLEPARENTAPP ENTITIES DO NOT WARRANT THAT THE SERVICES ARE ACCURATE, COMPLETE, RELIABLE, CURRENT, OR ERROR FREE. SINGLEPARENTAPP DOES NOT CONTROL, ENDORSE, OR TAKE RESPONSIBILITY FOR ANY CONTENT AVAILABLE ON OR LINKED TO THE SERVICES OR THE ACTIONS OF ANY THIRD PARTY OR USER, INCLUDING MODERATORS. WHILE REDDIT ATTEMPTS TO MAKE YOUR ACCESS TO AND USE OF OUR SERVICES SAFE, WE DO NOT REPRESENT OR WARRANT THAT OUR SERVICES OR SERVERS ARE FREE OF VIRUSES OR OTHER HARMFUL COMPONENTS.\n\n


 </string>
    <string name="text9">

    <b>8. Changes to these Terms</b>\n
    •	We may make changes to these Terms from time to time. If we make changes, we will post the revised Terms and update the Effective Date above. If the changes, in our sole discretion, are material, we may also notify you by sending an email to the address associated with your Account (if you have chosen to provide an email address) or by otherwise providing notice through our Services. By continuing to access or use the Services on or after the Effective Date of the revised Terms, you agree to be bound by the revised Terms. If you do not agree to the revised Terms, you must stop accessing and using our Services before the changes become effective.\n\n
</string>
    <string name="text10">

        <b>11. Termination</b>\n
•	You may terminate these Terms at any time and for any reason by deleting your Account and discontinuing use of all Services. If you stop using the Services without deactivating your Account, your Account may be deactivated due to prolonged inactivity.
•	We may suspend or terminate your Account, moderator status, or ability to access or use the Services at any time for any or no reason, including for violating these Terms or our Content Policy.
•	The following sections will survive any termination of these Terms or of your Account: 4 (Your Content), 6 (Things You Cannot Do), 10 (Indemnity), 11 (Disclaimers), 12 (Limitation of Liability), 13 (Governing Law and Venue), 16 (Termination), and 17 (Miscellaneous).\n\n

</string>
</resources>