<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/spacing_medium"
        android:paddingTop="@dimen/spacing_middle"
        android:paddingRight="@dimen/spacing_medium"
        android:paddingBottom="@dimen/spacing_middle">

        <View
            android:layout_width="@dimen/spacing_large"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Term of Services"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                app:fontFamily="serif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="last update January 2020"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/black"
                android:textStyle="italic"
                app:fontFamily="serif" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/bt_close"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@color/black"
            app:srcCompat="@drawable/ic_baseline_close" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="@dimen/spacing_small"
                android:text="@string/text1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="8pt"
                app:fontFamily="serif" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="@dimen/spacing_small"
                android:text="@string/text2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="8pt"
                app:fontFamily="serif" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="@dimen/spacing_small"
                android:text="@string/text3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="8pt"
                app:fontFamily="serif" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="@dimen/spacing_small"
                android:text="@string/text4"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="8pt"
                app:fontFamily="serif" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="@dimen/spacing_small"
                android:text="@string/text5"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="8pt"
                app:fontFamily="serif" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="@dimen/spacing_small"
                android:text="@string/text6"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="8pt"
                app:fontFamily="serif" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="@dimen/spacing_small"
                android:text="@string/text7"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="8pt"
                app:fontFamily="serif" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="@dimen/spacing_small"
                android:text="@string/text8"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="8pt"
                app:fontFamily="serif" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="@dimen/spacing_small"
                android:text="@string/text9"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="8pt"
                app:fontFamily="serif" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="@dimen/spacing_small"
                android:text="@string/text10"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="8pt"
                app:fontFamily="serif" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

</LinearLayout>