<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Introduction.StartActivityPart2">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="528dp"
        android:layout_height="327dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.907"
        app:srcCompat="@drawable/untitled" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="386dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/friends" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048"
        app:srcCompat="@drawable/ic_infinity" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Single Parent Community"
        android:textColor="#F57C00"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.916" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Find support and love."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        android:layout_width="217dp"
        android:layout_height="28dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-black"
        android:text="Register"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.637" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/button_facebook"
        android:layout_width="225dp"
        android:layout_height="28dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="13dp"
        android:textSize="14sp"
        app:com_facebook_login_text="Login with Facebook"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="217dp"
        android:layout_height="28dp"
        android:background="@drawable/custome_button_login"
        android:fontFamily="sans-serif-black"
        android:text="Login"
        android:textColor="@color/orange"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.505" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="388dp"
        android:layout_height="39dp"
        android:layout_marginTop="17dp"
        android:linksClickable="false"
        android:text="@string/privacy"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.607" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="391dp"
        android:layout_height="35dp"
        android:layout_marginTop="17dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/termsofService"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.607" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="410dp"
        android:layout_height="37dp"
        android:layout_marginTop="17dp"

        android:linksClickable="false"
        android:text="@string/termsofService1"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>